# Company-HR-Chatbot

./: .env.example  .gitignore  Dockerfile  JOURNAL.md  README.md  design-style.md  main.py  pyproject.toml  run_pipeline.py  skills-lock.json  test_fix.py
documents/: plan-deploy-monitor.md  plan-final.md  plan-v1.md  plan-v2.md  plan.md  plan_deploy.md  tech-requirements.md
evaluation/: question.md
experience/: fix_bug_report.md  minerU.md
raw-data/: Chi tiết Quy định phụ cấp điện thoại.xlsx  Project_Employee_Contact_List_Updated.xlsx  excel_allowlist.json
scripts/: build_bm25_index.py
source/: config.py  main.py
source/frontend/: app.js  index.html  login.css  login.html  login.js  styles.css
source/generation/: chat_engine.py
source/generation/prompts/: agent_system_prompt.xml  system_prompt_v1.xml
source/indexing/: vector_store.py
source/ingestion/: chunking.py  excel_loader.py  loaders.py  metadata.py
source/retrieval/: bm25_indexer.py  excel_reader.py  phone_allowance_reader.py  search_engine.py
tests/: test_chat.py  test_excel.py  test_loaders.py  test_search.py  test_tool_enforcement.py
