[project]
name = "hr-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.30.0",
     "pydantic-settings>=2.6.0",
     "python-dotenv>=1.0.0",
     "langchain-core>=0.3.0",
     "langchain-text-splitters>=0.3.0",
     "pypdf>=5.0.0",
     "python-docx>=1.1.2",
     "pydantic>=2.13.4",
]
