[project]
name = "hr-chatbot"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.30.0",
     "pydantic-settings>=2.6.0",
     "python-dotenv>=1.0.0",
     "langchain-core>=0.3.0",
     "langchain-text-splitters>=0.3.0",
     "pydantic>=2.13.4",
     "langchain-qdrant>=1.1.0",
     "polars[excel]>=1.0.0",
     "fastexcel>=0.12.0",
     "langchain-openai>=1.2.1",
     "langchain>=0.3.0",
     "langfuse>=3.0.0",
]

[project.optional-dependencies]
ingestion = [
     "pypdf>=5.0.0",
     "python-docx>=1.1.2",
     "kreuzberg>=4.9.7",
     "mineru-vl-utils[transformers]>=0.1.0",
     "pymupdf>=1.24.0",
     "pillow>=10.0.0",
     "torch>=2.6.0",
     "torchvision",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

# ==========================================
# CẤU HÌNH NGUỒN TẢI PYTORCH CUDA 12.4
# ==========================================
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
